Bug #1458, Fix tooltip z-index - Javascript behaviour, plus CSS

--- a/application/themes/oup_light/css/oup-light.css
+++ b/application/themes/oup_light/css/oup-light.css
@@ -362,12 +362,13 @@ body.bg-pale-blue{ background:#EBF4FB; color:#1A1A1A; }
 
 /* TOOLTIP - why do we need !important ? :(
 */
-.mejs-controls .oup-tooltip {
-	display:none !important;
+.mejs-container .mejs-controls .oup-tooltip, .oup-tooltip {
+	display:none;
 }
-.mejs-controls .oup-tooltip.show {
-	display:block !important;
+.mejs-container .mejs-controls .oup-tooltip.show, .oup-tooltip.show {
+	display:block;
 	position:fixed;
+	float:none;
 	background:#ffd;
 	color:#111;
 	border:1px solid #aaa;
@@ -377,9 +378,9 @@ body.bg-pale-blue{ background:#EBF4FB; color:#1A1A1A; }
 	line-height:1.1em;
 	height:1em;
 	white-space:nowrap;
-	z-index:999;
+	z-index:9999;
 }
-.ctx-Podcast_player .mejs-controls .oup-tooltip.show {
+.ctx-Podcast_player .mejs-controls .oup-tooltip.show, .ctx-Podcast_player .oup-tooltip.show {
 	padding:4px;
 	font-size:.8em;
 	line-height:1.2em;
